# repo_practice

./: pyproject.toml
app/: calculator.py
test/: calculator_test.py
