[tool.poetry]
name = "repo-practice"
version = "0.1.0"
description = "repo to practice making repo with github and poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pytest = "^8.3.3"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
